This is the HISTORY file for Expect.  Modifications made by Cygnus
support are in ChangeLog. - Don

Date	Version	Description
-------	-------	------------------------------------------------------
4/15/02 5.37.0	Added multixterm to example directory.

4/8/02	5.36.1	Backed out CONST qualifiers.  Too much trouble with older
		versions of Tcl.  I'll let someone else worry about them.

4/8/02	5.36.0	Made first cut at multixterm, a replacement for crlogin.

		Fixed bug in background handler.  If an action waited on the
		same spawn id, esPtr would become invalidated.

		Ryan Schmidt <rschmidt@mac.com> noted configure didn't
		recognize MacOS X.  Downloaded new config.guess.

		Andreas Kupries <andreask@activestate.com> provided CONST
		patches to accomodate Tcl changes per TIP 27.

2/25/02 5.35.0	Joe Eggleston <joe@arbor.net> noted bug in full_buffer test.
		The test hadn't been I18'd properly and was testing chars
		instead of bytes.  Also fixed diagnostics so it printed when
		it was testing full buffer even if there wasn't one.

2/7/02	5.34.1	Bruce Hartweg <brhartweg@bigfoot.com> noted that direct spawn
		ids were not being tested so something like "expect -i exp9999"
		would dump core.  Evidentally a bug from the 5.31 transition.

12/20/01 5.34.0	Don Porter <don.porter@nist.gov> provided package-related
		fixes for test suite.

		Brian Theado <brian.theado@usa.net> noted that interact's -re
		support broke when offsets kicked in.  Turned out that the
		regexp engine supports them during execution but the results
		are delivered RELATIVE to the offset.  (I suspect this was done
		due to expediency.)

10/1/01 5.33.0	<mark@doradosoftware.com> found that expect's diagnostics
		didn't include the "no" after testing for a full buffer.

		Hemang Lavana <hlavana@cisco.com> noted that "debug" (Dbg_On)
		calls didn't always force the debugger into step mode.

		Martin Kammerhofer <dada@sbox.tugraz.at> noted that the man
		page neglected to document interpreter -eof.
